      (CNY-796)
    * Conary no longer tries to display the contents of autosource files
      in "cvc diff" (CNY-866)

  o Build (cvc) Changes:
    * The new "cvc refresh" command allows you to request that cvc
      fetch new upstream versions of files referenced by URL.  Thanks
      to Pavel Volkovitskiy for the initial implementation of this
      feature. (CNY-743)

  o Bug Fixes:
    * Conary commands do not perform an unnecessary database checks on the
      local system. (CNY-571)
    * Fixed a bug that could allow conary to consider a noop update as an
      install (and could result in tracebacks in some situations). (CNY-845)
    * If you've made a local modification to a package and then try to
      downgrade it later, conary will downgrade included components as well.
      (CNY-836)
    * The error message produced by "cvc cook" when a source component
      exists on multiple branches with the same trailing label has
      been improved. (CNY-714)
    * Error handling when manipulating entitlements via XML-RPC has
      been improved. (CNY-692)
    * The usage message displayed when running "conary changeset" has
      been corrected. (CNY-864)
    * Conary no longer tracebacks when a disconnected cook tries to load
      a superclass.  Conary also gives better messages when the loaded recipe
      has a traceback.  Thanks to David Coulthart for the core of this patch.
      (CNY-518, CNY-713).
    * Fixed a bug in dep scoring: dependency scoring when multiple sonames
      were being scored would simply use the value of the last soname,
      instead of the cumulative score (note that the deps that did not
      match at all would still return as not matching, so this bug only
      affected conary's ability to select the best match)
    * Fixed a bug in dep scoring: matching architectures are now counted as
      having a positive value, so that when performing dep resolution on 